--- a/MyFirstApp/res/layout/activity_main.xml
+++ b/MyFirstApp/res/layout/activity_main.xml
@@ -15,14 +15,15 @@
         android:text="@string/hello_world" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/edit_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="53dp"
         android:ems="10"
-        android:inputType="textMultiLine" >
+        android:inputType="textMultiLine" 
+        android:hint="@string/edit_message">
 
         <requestFocus />
     </EditText>
@@ -31,8 +32,9 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1"
-        android:text="@string/button1_text" />
+        android:layout_alignLeft="@+id/edit_message"
+        android:layout_below="@+id/edit_message"
+        android:text="@string/button1_text"
+        android:onClick="sendMessage"/>
 
 </RelativeLayout>
